# SharedMemoryServer

./: .clinerules  .cursorrules  .gitignore  CHANGELOG.md  COMMERCIAL.md  Dockerfile  README.md  docker-compose.yml  graph_dump.txt  knowledge.db-shm  knowledge.db-wal  lefthook.yml  logic_develop.py  logic_main.py  pyproject.toml  ripen.spec  shared_memory.db-shm  shared_memory.db-wal  test_output.txt  thoughts.db-shm  thoughts.db-wal
.github/workflows/: ci.yml  main.yml  release.yml
data/: config.json
docs/: LEGAL_TEMPLATE.md  design_philosophy.md  概念的要件定義書.md  配信計画.md
docs/blog/: SharedMemoryServerの宣伝&技術ブログ記事.md
docs/idea/: coware_sync_proposal_status.md  future_roadmap_and_maintenance.md  monetization_strategy.md  sync_implementation_plan.md
docs/marketing/: zenn_ripen_article.md  zenn_shared_memory_mcp_article.md  宣伝・掲載履歴.md
docs/reports/: CALL_VERIFIED.txt  EXECUTION_TRACE.txt  KEY_DIAG_LOG.txt  absolute_fix_final_results.txt  collect_only.txt  collection_error.txt  failing_tests_report.txt  final_comprehensive_verification.txt  final_error_check.txt  final_fix_verification.txt  final_phase8_verification.txt  final_phase8_verification_utf8.txt  final_production_verification.txt  final_signoff_results.txt  final_targeted_verification.txt  final_targeted_verification_utf8.txt  final_targeted_verification_v2.txt  final_targeted_verification_v4.txt  final_v3.txt  final_verification_abs_imports.txt  full_verification_failure.txt  handover_final_verification.txt  phase11_final_signoff.txt  phase11_final_verification.txt  phase11_final_verification_utf8.txt  phase11_final_verification_v10.txt  phase11_final_verification_v2.txt  phase11_final_verification_v2_utf8.txt  phase11_final_verification_v3.txt  phase11_final_verification_v4.txt  phase11_final_verification_v5.txt  phase11_final_verification_v6.txt  phase11_final_verification_v7.txt  phase11_final_verification_v8.txt  phase11_final_verification_v9.txt  phase9_final_verification.txt  phase9_final_verification_utf8.txt  phase9_refactor_test_results.txt  phase9_refactor_test_results_utf8.txt
docs/troubleshooting/: ci_hang_resolution_ja.md  mcp_eof_connection_error.md
docs/宣伝/: zenn_shared_memory_mcp_article.md
his/: Troubleshooting SharedMemoryServer SSE Startup.md
memory-bank/: productContext.md  projectBrief.md  systemPatterns.md  techContext.md
scratch/: ast_validate.py  check_bak_tables.py  check_schema.py  check_sdk.py  concurrency_stress_test.py  deep_compare.py  deep_stress_test.py  dogfood_sse_client.py  fix_db_init.py  inspect_db.py  inspect_mcp.py  inspect_volume.py  investigate_migration.py  reproduction.py  test_aiosqlite.py  test_aiosqlite_reentry.py  test_mcp.py  test_normalization.py  test_server_stdio.py  test_wrapper.py  tools_list_raw.json  verify_admin_report.py  verify_fix.py  verify_knowledge_injection.py  verify_priority_boost.py
scripts/: build_exe.py  check_db.py  final_check.py  find_keys.py  find_pass.py  read_tests.py  ripen-client.py  run_migrations.py  test_enterprise_discovery.py  verify_dashboard.py  verify_gemini_31.py  verify_key_status.py  verify_snapshot_fix.py  verify_troubleshooting.py
scripts/analysis/: long_mem_eval.py  run_ragas_eval.py  simulate_flow.py
scripts/legacy_archived/: debug_ragas.py  final_check.py  find_keys.py  find_pass.py  read_tests.py  test_injection.py  verify_gemini_31.py  verify_search_logic.py  verify_snapshot_fix.py
scripts/migrations/: manager.py
scripts/tools/: build.py  data_analysis_report.py  deep_audit.py  diag_thought.py  diagnose_db.py  inspect_db.py  repair_data.py  rescue_legacy_data.py  trace_viewer.py  verify_key_status.py  verify_troubleshooting.py
src/: verify_efficiency.py
src/shared_memory/: __init__.py  admin_cli.py  admin_server.py  ai_control.py  (+20 more)
tests/: conftest.py  test_async_validation.py  test_bank.py  test_chaos.db-journal  test_concurrency.py  test_database.py  test_e2e.py  test_graph.py  test_hardened_limits.py  test_health_optimization.py  test_knowledge_injection.py  test_management.py  test_ragas_eval.py  test_resilience.py  test_search.py  test_stress.py  test_thought.py  test_thought_hardened.py  test_thought_integration.py
(+145 files in other folders)
