[project]
name = "sharedmemoryserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "aiofiles",
    "google-genai",
    "numpy",
    "ruff",
    "aiosqlite",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ragas>=0.1.0",
    "pandas",
    "datasets",
    "langchain-google-genai",
]

[project.scripts]
shared-memory = "shared_memory.server:main"
shared-memory-register = "shared_memory.register:main"
shared-memory-unregister = "shared_memory.unregister:main"
shared-memory-admin = "shared_memory.admin_cli:main"
shared-memory-admin-server = "shared_memory.admin_server:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["shared_memory"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared_memory"]
