[project]
name = "sharedmemoryserver"
version = "1.8.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "aiofiles",
    "google-genai",
    "numpy",
    "ruff",
    "aiosqlite",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-timeout",
    "ragas>=0.1.0",
    "pandas",
    "datasets",
    "langchain-google-genai",
]

[project.scripts]
shared-memory = "shared_memory.server:main"
shared-memory-register = "shared_memory.register:main"
shared-memory-unregister = "shared_memory.unregister:main"
shared-memory-admin = "shared_memory.admin_cli:main"
shared-memory-admin-server = "shared_memory.admin_server:main"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["archive"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["shared_memory"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared_memory"]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
version_variables = [
    "src/shared_memory/__init__.py:__version__",
]
branch = "master"
major_on_zero = false
upload_to_repository = false
upload_to_release = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [".*", "dist", "build"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "concurrency: marks tests that involve heavy concurrency",
]
timeout = 300
