[project]
name = "shared-memory-server"
version = "0.1.0"
dependencies = []

[project.scripts]
shared-memory = "shared_memory.api.server:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL"]
ignore = [
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "PLC0415", # Local imports (used to avoid circular dependencies)
    "PLR2004", # Magic values in comparisons
    "PLW0603", # Global statement
    "E402",    # Module level import not at top of file
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["shared_memory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "system: System tests",
    "chaos: Chaos/Failure tests",
]
asyncio_default_fixture_loop_scope = "function"
